# mkdocs-base

./: .env.example  Dockerfile  README.md  dev.docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: index.md
docs/Section/: example.md  index.md
includes/: abbreviations.md
