[project]
name = "mkdocs-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-htmlproofer-plugin>=1.3.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocs-rss-plugin>=1.16.0",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.26.2",
    "pygments>=2.18.0",
]

[tool.uv]
dev-dependencies = [
    "cookiecutter>=2.6.0",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
]
